tests/failure/missing/semicolon_4.expected
syntax error: expected ";" before "PRODUCTIONS:": line 7, column 1 to line 7, column 12:
PRODUCTIONS:
^^^^^^^^^^^^

